--- a/src/about.css
+++ b/src/about.css
@@ -24,6 +24,12 @@
     max-width: 51rem;
     padding: 0 2rem;
 }
+.skillDesc2{
+    font-weight: 400;
+    font-size:xx-large;
+    max-width: 51rem;
+    padding: 0 2rem;
+}
 
 .skillBars{
     margin: 1.5rem;
