--- a/src/contact.css
+++ b/src/contact.css
@@ -1,8 +1,12 @@
+/*
+filename: contact.css
+Student Name: Duc Ngo
+Student ID : 301221389
+Date : 28 Jan 2024
+*/
+
 #ffp{
- 
 
-
-    
     max-width: 50rem;
     display: flex;
     flex-direction: column;
