--- a/src/project.css
+++ b/src/project.css
@@ -1,3 +1,10 @@
+/*
+filename: project.css
+Student Name: Duc Ngo
+Student ID : 301221389
+Date : 28 Jan 2024
+*/
+
 #works {
     margin: 0 auto;
     min-height: calc(100vh - 4rem);
