--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+/*
+filename: App.css
+Student Name: Duc Ngo
+Student ID : 301221389
+Date : 28 Jan 2024
+*/
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
