--- a/src/about.css
+++ b/src/about.css
@@ -1,3 +1,10 @@
+/*
+filename: about.css
+Student Name: Duc Ngo
+Student ID : 301221389
+Date : 28 Jan 2024
+*/
+
 #skill {
     overflow: hidden;
     width: 100vw;
