--- a/src/home.css
+++ b/src/home.css
@@ -1,3 +1,10 @@
+/*
+filename: home.css
+Student Name: Duc Ngo
+Student ID : 301221389
+Date : 28 Jan 2024
+*/
+
 html{
     margin-left: auto;
     margin-right: auto;
