--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/*
+filename: index.css
+Student Name: Duc Ngo
+Student ID : 301221389
+Date : 28 Jan 2024
+*/
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
